--- a/index.html
+++ b/index.html
@@ -20,8 +20,12 @@
     <section id="about">
       <h1>Hi, I'm Shaun Furtado</h1>
       <p>
-        I'm a web developer passionate about creating awesome websites and
-        applications.
+        I'm a passionate web developer with a keen eye for design and a knack
+        for creating exceptional web experiences. Whether it's crafting elegant
+        front-end interfaces or building robust back-end solutions, I love
+        turning ideas into reality. My journey in the world of web development
+        has been an exciting and ever-evolving adventure, and I'm thrilled to
+        share some of my work with you.
       </p>
     </section>
 
