--- a/index.html
+++ b/index.html
@@ -31,7 +31,23 @@
 
     <section id="portfolio">
       <h2>Portfolio</h2>
-      <!-- Add your project cards here -->
+      <div class="project-container">
+        <!-- Project Card 1 -->
+        <div class="project-card">
+          <img src="images/project1.jpg" alt="Project 1" />
+          <h3>Project 1</h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+          <a href="#">View Project</a>
+        </div>
+        <!-- Project Card 2 -->
+        <div class="project-card">
+          <img src="images/project2.jpg" alt="Project 2" />
+          <h3>Project 2</h3>
+          <p>Nulla facilisi. Vivamus tincidunt ipsum sit amet elit.</p>
+          <a href="#">View Project</a>
+        </div>
+        <!-- Add more project cards here -->
+      </div>
     </section>
 
     <section id="contact">
