--- a/index.html
+++ b/index.html
@@ -34,15 +34,39 @@
       <div class="project-container">
         <!-- Project Card 1 -->
         <div class="project-card">
-          <img src="images/project1.jpg" alt="Project 1" />
+          <img
+            src="https://previews.123rf.com/images/ivook/ivook1307/ivook130700024/20979285-xxl-doodle-icons-set-no.4-for-every-occasion-in-black-and-white.-small-hand-drawn-illustrations-are-isolated-(group)-on-background-.jpg"
+            alt="Project 1"
+          />
           <h3>Project 1</h3>
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
           <a href="#">View Project</a>
         </div>
         <!-- Project Card 2 -->
         <div class="project-card">
-          <img src="images/project2.jpg" alt="Project 2" />
+          <img
+            src="https://previews.123rf.com/images/ivook/ivook1307/ivook130700024/20979285-xxl-doodle-icons-set-no.4-for-every-occasion-in-black-and-white.-small-hand-drawn-illustrations-are-isolated-(group)-on-background-.jpg"
+            alt="Project 2"
+          />
           <h3>Project 2</h3>
+          <p>Nulla facilisi. Vivamus tincidunt ipsum sit amet elit.</p>
+          <a href="#">View Project</a>
+        </div>
+        <div class="project-card">
+          <img
+            src="https://previews.123rf.com/images/ivook/ivook1307/ivook130700024/20979285-xxl-doodle-icons-set-no.4-for-every-occasion-in-black-and-white.-small-hand-drawn-illustrations-are-isolated-(group)-on-background-.jpg"
+            alt="Project 2"
+          />
+          <h3>Project 3</h3>
+          <p>Nulla facilisi. Vivamus tincidunt ipsum sit amet elit.</p>
+          <a href="#">View Project</a>
+        </div>
+        <div class="project-card">
+          <img
+            src="https://previews.123rf.com/images/ivook/ivook1307/ivook130700024/20979285-xxl-doodle-icons-set-no.4-for-every-occasion-in-black-and-white.-small-hand-drawn-illustrations-are-isolated-(group)-on-background-.jpg"
+            alt="Project 2"
+          />
+          <h3>Project 4</h3>
           <p>Nulla facilisi. Vivamus tincidunt ipsum sit amet elit.</p>
           <a href="#">View Project</a>
         </div>
