--- a/index.html
+++ b/index.html
@@ -7,83 +7,17 @@
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
-    <header>
-      <nav>
-        <ul>
-          <li><a href="#about">About</a></li>
-          <li><a href="#portfolio">Portfolio</a></li>
-          <li><a href="#contact">Contact</a></li>
-        </ul>
-      </nav>
-    </header>
-
-    <section id="about">
-      <h1>Hi, I'm Shaun Furtado</h1>
-      <p>
-        I'm a passionate web developer with a keen eye for design and a knack
-        for creating exceptional web experiences. Whether it's crafting elegant
-        front-end interfaces or building robust back-end solutions, I love
-        turning ideas into reality. My journey in the world of web development
-        has been an exciting and ever-evolving adventure, and I'm thrilled to
-        share some of my work with you.
-      </p>
-    </section>
-
-    <section id="portfolio">
-      <h2>Portfolio</h2>
-      <div class="project-container">
-        <!-- Project Card 1 -->
-        <div class="project-card">
-          <img
-            src="https://previews.123rf.com/images/ivook/ivook1307/ivook130700024/20979285-xxl-doodle-icons-set-no.4-for-every-occasion-in-black-and-white.-small-hand-drawn-illustrations-are-isolated-(group)-on-background-.jpg"
-            alt="Project 1"
-          />
-          <h3>Project 1</h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-          <a href="#">View Project</a>
-        </div>
-        <!-- Project Card 2 -->
-        <div class="project-card">
-          <img
-            src="https://previews.123rf.com/images/ivook/ivook1307/ivook130700024/20979285-xxl-doodle-icons-set-no.4-for-every-occasion-in-black-and-white.-small-hand-drawn-illustrations-are-isolated-(group)-on-background-.jpg"
-            alt="Project 2"
-          />
-          <h3>Project 2</h3>
-          <p>Nulla facilisi. Vivamus tincidunt ipsum sit amet elit.</p>
-          <a href="#">View Project</a>
-        </div>
-        <div class="project-card">
-          <img
-            src="https://previews.123rf.com/images/ivook/ivook1307/ivook130700024/20979285-xxl-doodle-icons-set-no.4-for-every-occasion-in-black-and-white.-small-hand-drawn-illustrations-are-isolated-(group)-on-background-.jpg"
-            alt="Project 2"
-          />
-          <h3>Project 3</h3>
-          <p>Nulla facilisi. Vivamus tincidunt ipsum sit amet elit.</p>
-          <a href="#">View Project</a>
-        </div>
-        <div class="project-card">
-          <img
-            src="https://previews.123rf.com/images/ivook/ivook1307/ivook130700024/20979285-xxl-doodle-icons-set-no.4-for-every-occasion-in-black-and-white.-small-hand-drawn-illustrations-are-isolated-(group)-on-background-.jpg"
-            alt="Project 2"
-          />
-          <h3>Project 4</h3>
-          <p>Nulla facilisi. Vivamus tincidunt ipsum sit amet elit.</p>
-          <a href="#">View Project</a>
-        </div>
-        <!-- Add more project cards here -->
-      </div>
-    </section>
-
-    <section id="contact">
-      <h2>Contact Me</h2>
-      <p>
-        You can reach me at <a href="mailto:shaun@email.com">shaun@email.com</a>
-      </p>
-    </section>
-
-    <footer>
-      <p>&copy; 2023 Shaun Furtado</p>
-    </footer>
+    <div class="overlay"></div>
+    <div class="stars" aria-hidden="true"></div>
+    <div class="starts2" aria-hidden="true"></div>
+    <div class="stars3" aria-hidden="true"></div>
+    <main class="main">
+      <section class="contact">
+        <h1 class="title">Awesome Thing</h1>
+        <h2 class="sub-title">Site Under Construction</h2>
+        <h3>Come Again Later</h3>
+      </section>
+    </main>
     <script src="js/script.js"></script>
   </body>
 </html>
